# pkg/models/privilege.go
@@ -35,6 +35,7 @@ const (
 	ProjectsWrite      PrivilegeKey = "core:projects:write"
 	UsersRead          PrivilegeKey = "core:users:read"
 	UsersWrite         PrivilegeKey = "core:users:write"
+	UsersActivityRead  PrivilegeKey = "core:users:activity:read"
 	OrganizationsRead  PrivilegeKey = "core:organizations:read"
 	OrganizationsWrite PrivilegeKey = "core:organizations:write"
 	TracesRead         PrivilegeKey = "core:traces:read"
@@ -57,6 +58,7 @@ func init() {
 		ProjectsWrite,
 		UsersRead,
 		UsersWrite,
+		UsersActivityRead,
 		OrganizationsRead,
 		OrganizationsWrite,
 		TracesRead,
